--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -2,3 +2,18 @@
     background-color: #FB9B9B;
     font-family: "Verdana", "DejaVu Sans", sans-serif;
 }
+
+#second {
+    color: #0b21e2;
+    font-size: 36px;
+}
+
+.odd.third {
+    font-size: 36px;
+}
+
+#fourth {
+    background-color: #b6f1aa;
+    font-size: 24px;
+    font-weight: bold;
+}
