--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,4 +1,5 @@
 body {
+  text-align: center;
   font-family: 'Courier New', Courier, monospace;
 }
 
@@ -10,6 +11,17 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 32px;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+
+.container div {
+  max-width: 200px;
 }
 
 /* do not edit this footer */
